Adicionado: > Classe Usuario > UsuarioViewModel > Navigation de Login > Fragment de Cadastro > Layout de fragment_cadastro.xml

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="boxTextLogin">#FFFFFF</color>
+    <color name="boxTextLogin">#D3D3D3</color>
 </resources>
