--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/degrade_login"
-    tools:context=".Fragment.CadastroFragment">
+    tools:context=".Fragment.LoginFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/degrade_login">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
@@ -26,86 +26,98 @@
             app:layout_constraintGuide_end="30dp" />
 
         <TextView
-            android:id="@+id/textTitulo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="68dp"
-            android:text="Novo Cadastro"
-            android:textColor="@color/boxTextLogin"
-            android:textSize="25dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintHorizontal_bias="0.494"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
-
-        <TextView
             android:id="@+id/textoEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
             android:text="@string/textoEmail"
             android:textColor="@color/boxTextLogin"
-            android:textColorLink="@color/boxTextLogin"
-            app:layout_constraintBottom_toTopOf="@+id/boxEmailCadastro"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintBottom_toTopOf="@+id/boxEmail"
+            app:layout_constraintStart_toStartOf="@+id/boxEmail"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed" />
 
         <EditText
-            android:id="@+id/boxEmailCadastro"
+            android:id="@+id/boxEmail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Insira seu e-mail"
+            android:hint="@string/boxEmail"
             android:inputType=""
             android:textColor="@color/boxTextLogin"
             android:textColorLink="@color/boxTextLogin"
-            app:layout_constraintBottom_toTopOf="@+id/textoSenhaCadastro"
+            app:layout_constraintBottom_toTopOf="@+id/textoSenha"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="@+id/guideline"
             app:layout_constraintTop_toBottomOf="@+id/textoEmail" />
 
         <TextView
-            android:id="@+id/textoSenhaCadastro"
+            android:id="@+id/textoSenha"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
             android:layout_marginTop="40dp"
             android:text="@string/textoSenha"
             android:textColor="@color/boxTextLogin"
-            app:layout_constraintBottom_toTopOf="@+id/boxSenhaCadastro"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/boxEmailCadastro" />
+            app:layout_constraintBottom_toTopOf="@+id/boxSenha"
+            app:layout_constraintStart_toStartOf="@+id/boxSenha"
+            app:layout_constraintTop_toBottomOf="@+id/boxEmail" />
 
         <EditText
-            android:id="@+id/boxSenhaCadastro"
+            android:id="@+id/boxSenha"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Insira sua senha"
+            android:hint="@string/boxSenha"
             android:inputType="textPassword"
             android:textColor="@color/boxTextLogin"
             android:textColorLink="@color/boxTextLogin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/textoSenhaCadastro" />
+            app:layout_constraintTop_toBottomOf="@+id/textoSenha" />
+
+        <TextView
+            android:id="@+id/textoCadastro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="35dp"
+            android:autoLink="all|web|phone|none|map|email"
+            android:clickable="true"
+            android:text="@string/textoCadastrar"
+            android:textColor="@color/boxTextLogin"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toBottomOf="@+id/boxSenha"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="108dp"
+            android:layout_height="238dp"
+            app:layout_constraintBottom_toTopOf="@+id/textoEmail"
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/icon" />
 
         <Button
-            android:id="@+id/btnCadastrar"
-            android:layout_width="0dp"
+            android:id="@+id/btnLogin"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#FF5F17D3"
-            android:text="Cadastrar "
+            android:text="@string/btnLogin"
             android:textColor="@color/boxTextLogin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/boxSenhaCadastro"
-            app:layout_constraintVertical_bias="0.236" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.82" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
