--- a/app/src/main/res/layout/fragment_cadastro.xml
+++ b/app/src/main/res/layout/fragment_cadastro.xml
@@ -26,7 +26,7 @@
             app:layout_constraintGuide_end="30dp" />
 
         <TextView
-            android:id="@+id/textTitulo"
+            android:id="@+id/textTituloCadastro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="68dp"
@@ -41,7 +41,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/textoEmail"
+            android:id="@+id/textoEmailCadastro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
@@ -66,7 +66,7 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/textoEmail" />
+            app:layout_constraintTop_toBottomOf="@+id/textoEmailCadastro" />
 
         <TextView
             android:id="@+id/textoSenhaCadastro"
