Adicionado Cadastro compelto no fragment de cadastro

--- a/app/src/main/res/layout/fragment_cadastro.xml
+++ b/app/src/main/res/layout/fragment_cadastro.xml
@@ -29,7 +29,7 @@
             android:id="@+id/textTituloCadastro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="68dp"
+            android:layout_marginTop="10dp"
             android:text="Novo Cadastro"
             android:textColor="@color/boxTextLogin"
             android:textSize="25dp"
@@ -55,7 +55,7 @@
 
         <EditText
             android:id="@+id/boxEmailCadastro"
-            android:layout_width="0dp"
+            android:layout_width="352dp"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Insira seu e-mail"
@@ -63,36 +63,33 @@
             android:textColor="@color/boxTextLogin"
             android:textColorLink="@color/boxTextLogin"
             app:layout_constraintBottom_toTopOf="@+id/textoSenhaCadastro"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/textoEmailCadastro" />
+            app:layout_constraintTop_toBottomOf="@+id/textoEmailCadastro"
+            tools:layout_editor_absoluteX="30dp" />
 
         <TextView
             android:id="@+id/textoSenhaCadastro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="5dp"
             android:text="@string/textoSenha"
             android:textColor="@color/boxTextLogin"
             app:layout_constraintBottom_toTopOf="@+id/boxSenhaCadastro"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintStart_toStartOf="@+id/boxSenhaCadastro"
             app:layout_constraintTop_toBottomOf="@+id/boxEmailCadastro" />
 
         <EditText
             android:id="@+id/boxSenhaCadastro"
-            android:layout_width="0dp"
+            android:layout_width="352dp"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Insira sua senha"
             android:inputType="textPassword"
             android:textColor="@color/boxTextLogin"
             android:textColorLink="@color/boxTextLogin"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/textoSenhaCadastro" />
+            app:layout_constraintBottom_toTopOf="@+id/textNomeCadastro"
+            app:layout_constraintTop_toBottomOf="@+id/textoSenhaCadastro"
+            tools:layout_editor_absoluteX="30dp" />
 
         <Button
             android:id="@+id/btnCadastrar"
@@ -106,6 +103,176 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline"
             app:layout_constraintTop_toBottomOf="@+id/boxSenhaCadastro"
-            app:layout_constraintVertical_bias="0.236" />
+            app:layout_constraintVertical_bias="0.95" />
+
+        <EditText
+            android:id="@+id/boxNomeCadastro"
+            android:layout_width="352dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Nome"
+            android:inputType="textPersonName"
+            android:textColor="@color/boxTextLogin"
+            android:textColorLink="@color/boxTextLogin"
+            app:layout_constraintBottom_toTopOf="@+id/textSobrenomeCadastro"
+            app:layout_constraintTop_toBottomOf="@+id/textNomeCadastro"
+            tools:layout_editor_absoluteX="30dp" />
+
+        <TextView
+            android:id="@+id/textNomeCadastro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="5dp"
+            android:text="Nome"
+            android:textColor="@color/boxTextLogin"
+            android:textColorLink="@color/boxTextLogin"
+            app:layout_constraintBottom_toTopOf="@+id/boxNomeCadastro"
+            app:layout_constraintStart_toStartOf="@+id/boxNomeCadastro"
+            app:layout_constraintTop_toBottomOf="@+id/boxSenhaCadastro" />
+
+        <EditText
+            android:id="@+id/boxSobrenomeCadastro"
+            android:layout_width="352dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Sobrenome"
+            android:inputType="textPersonName"
+            android:textColor="@color/boxTextLogin"
+            android:textColorLink="@color/boxTextLogin"
+            app:layout_constraintBottom_toTopOf="@+id/textApelidoCadastro"
+            app:layout_constraintTop_toBottomOf="@+id/textSobrenomeCadastro"
+            tools:layout_editor_absoluteX="30dp" />
+
+        <TextView
+            android:id="@+id/textSobrenomeCadastro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="5dp"
+            android:text="Sobrenoime"
+            android:textColor="@color/boxTextLogin"
+            android:textColorLink="@color/boxTextLogin"
+            app:layout_constraintBottom_toTopOf="@+id/boxSobrenomeCadastro"
+            app:layout_constraintStart_toStartOf="@+id/boxSobrenomeCadastro"
+            app:layout_constraintTop_toBottomOf="@+id/boxNomeCadastro" />
+
+        <EditText
+            android:id="@+id/boxSobrenomeCadastro2"
+            android:layout_width="352dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="CPF"
+            android:inputType="textPersonName"
+            android:textColor="@color/boxTextLogin"
+            android:textColorLink="@color/boxTextLogin"
+            app:layout_constraintBottom_toTopOf="@+id/textDDDCadastro"
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toBottomOf="@+id/textCPFCadastro" />
+
+        <TextView
+            android:id="@+id/textCPFCadastro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="5dp"
+            android:text="CPF"
+            android:textColor="@color/boxTextLogin"
+            android:textColorLink="@color/boxTextLogin"
+            app:layout_constraintBottom_toTopOf="@+id/boxSobrenomeCadastro2"
+            app:layout_constraintStart_toStartOf="@+id/boxSobrenomeCadastro2"
+            app:layout_constraintTop_toBottomOf="@+id/boxEsatdoCadastro" />
+
+        <EditText
+            android:id="@+id/boxApelidoCadastro"
+            android:layout_width="352dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Apelido"
+            android:inputType="textPersonName"
+            app:layout_constraintBottom_toTopOf="@+id/textEstadoCadastro"
+            app:layout_constraintTop_toBottomOf="@+id/textApelidoCadastro"
+            tools:layout_editor_absoluteX="30dp" />
+
+        <TextView
+            android:id="@+id/textApelidoCadastro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="5dp"
+            android:text="Apelido"
+            android:textColor="@color/boxTextLogin"
+            android:textColorLink="@color/boxTextLogin"
+            app:layout_constraintBottom_toTopOf="@+id/boxApelidoCadastro"
+            app:layout_constraintStart_toStartOf="@+id/boxApelidoCadastro"
+            app:layout_constraintTop_toBottomOf="@+id/boxSobrenomeCadastro" />
+
+        <EditText
+            android:id="@+id/boxEsatdoCadastro"
+            android:layout_width="352dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Estado"
+            android:inputType="textPersonName"
+            app:layout_constraintBottom_toTopOf="@+id/textCPFCadastro"
+            app:layout_constraintTop_toBottomOf="@+id/textEstadoCadastro"
+            tools:layout_editor_absoluteX="30dp" />
+
+        <TextView
+            android:id="@+id/textEstadoCadastro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="5dp"
+            android:text="Estado"
+            android:textColor="@color/boxTextLogin"
+            android:textColorLink="@color/boxTextLogin"
+            app:layout_constraintBottom_toTopOf="@+id/boxEsatdoCadastro"
+            app:layout_constraintStart_toStartOf="@+id/boxEsatdoCadastro"
+            app:layout_constraintTop_toBottomOf="@+id/boxApelidoCadastro" />
+
+        <EditText
+            android:id="@+id/boxDDDCadastro"
+            android:layout_width="75dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="DDD"
+            android:inputType="textPersonName"
+            tools:layout_editor_absoluteX="30dp"
+            tools:layout_editor_absoluteY="598dp" />
+
+        <TextView
+            android:id="@+id/textDDDCadastro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:text="DDD"
+            android:textColor="@color/boxTextLogin"
+            android:textColorLink="@color/boxTextLogin"
+            app:layout_constraintStart_toStartOf="@+id/boxDDDCadastro"
+            tools:layout_editor_absoluteY="579dp" />
+
+        <EditText
+            android:id="@+id/boxTelefoneCadastro"
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Telefone"
+            android:inputType="textPersonName"
+            tools:layout_editor_absoluteX="120dp"
+            tools:layout_editor_absoluteY="598dp" />
+
+        <TextView
+            android:id="@+id/textTelefoneCadastro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Telefone"
+            android:textColor="@color/boxTextLogin"
+            android:textColorLink="@color/boxTextLogin"
+            app:layout_constraintStart_toStartOf="@+id/boxTelefoneCadastro"
+            tools:layout_editor_absoluteY="579dp" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
