salvando os usuarios numa lista

--- a/app/src/main/res/layout/fragment_cadastro.xml
+++ b/app/src/main/res/layout/fragment_cadastro.xml
@@ -44,7 +44,6 @@
             android:id="@+id/textoEmailCadastro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
             android:text="@string/textoEmail"
             android:textColor="@color/boxTextLogin"
             android:textColorLink="@color/boxTextLogin"
@@ -63,14 +62,14 @@
             android:textColor="@color/boxTextLogin"
             android:textColorLink="@color/boxTextLogin"
             app:layout_constraintBottom_toTopOf="@+id/textoSenhaCadastro"
-            app:layout_constraintTop_toBottomOf="@+id/textoEmailCadastro"
-            tools:layout_editor_absoluteX="30dp" />
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toBottomOf="@+id/textoEmailCadastro" />
 
         <TextView
             android:id="@+id/textoSenhaCadastro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
             android:layout_marginTop="5dp"
             android:text="@string/textoSenha"
             android:textColor="@color/boxTextLogin"
@@ -88,8 +87,9 @@
             android:textColor="@color/boxTextLogin"
             android:textColorLink="@color/boxTextLogin"
             app:layout_constraintBottom_toTopOf="@+id/textNomeCadastro"
-            app:layout_constraintTop_toBottomOf="@+id/textoSenhaCadastro"
-            tools:layout_editor_absoluteX="30dp" />
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toBottomOf="@+id/textoSenhaCadastro" />
 
         <Button
             android:id="@+id/btnCadastrar"
@@ -115,14 +115,14 @@
             android:textColor="@color/boxTextLogin"
             android:textColorLink="@color/boxTextLogin"
             app:layout_constraintBottom_toTopOf="@+id/textSobrenomeCadastro"
-            app:layout_constraintTop_toBottomOf="@+id/textNomeCadastro"
-            tools:layout_editor_absoluteX="30dp" />
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toBottomOf="@+id/textNomeCadastro" />
 
         <TextView
             android:id="@+id/textNomeCadastro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
             android:layout_marginTop="5dp"
             android:text="Nome"
             android:textColor="@color/boxTextLogin"
@@ -141,14 +141,14 @@
             android:textColor="@color/boxTextLogin"
             android:textColorLink="@color/boxTextLogin"
             app:layout_constraintBottom_toTopOf="@+id/textApelidoCadastro"
-            app:layout_constraintTop_toBottomOf="@+id/textSobrenomeCadastro"
-            tools:layout_editor_absoluteX="30dp" />
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toBottomOf="@+id/textSobrenomeCadastro" />
 
         <TextView
             android:id="@+id/textSobrenomeCadastro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
             android:layout_marginTop="5dp"
             android:text="Sobrenoime"
             android:textColor="@color/boxTextLogin"
@@ -158,7 +158,7 @@
             app:layout_constraintTop_toBottomOf="@+id/boxNomeCadastro" />
 
         <EditText
-            android:id="@+id/boxSobrenomeCadastro2"
+            android:id="@+id/boxCpf"
             android:layout_width="352dp"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -175,14 +175,13 @@
             android:id="@+id/textCPFCadastro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
             android:layout_marginTop="5dp"
             android:text="CPF"
             android:textColor="@color/boxTextLogin"
             android:textColorLink="@color/boxTextLogin"
-            app:layout_constraintBottom_toTopOf="@+id/boxSobrenomeCadastro2"
-            app:layout_constraintStart_toStartOf="@+id/boxSobrenomeCadastro2"
-            app:layout_constraintTop_toBottomOf="@+id/boxEsatdoCadastro" />
+            app:layout_constraintBottom_toTopOf="@+id/boxCpf"
+            app:layout_constraintStart_toStartOf="@+id/boxCpf"
+            app:layout_constraintTop_toBottomOf="@+id/boxEstadoCadastro" />
 
         <EditText
             android:id="@+id/boxApelidoCadastro"
@@ -192,15 +191,14 @@
             android:hint="Apelido"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toTopOf="@+id/textEstadoCadastro"
-            app:layout_constraintTop_toBottomOf="@+id/textApelidoCadastro"
-            tools:layout_editor_absoluteX="30dp" />
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toBottomOf="@+id/textApelidoCadastro" />
 
         <TextView
             android:id="@+id/textApelidoCadastro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
             android:layout_marginTop="5dp"
             android:text="Apelido"
             android:textColor="@color/boxTextLogin"
@@ -210,59 +208,63 @@
             app:layout_constraintTop_toBottomOf="@+id/boxSobrenomeCadastro" />
 
         <EditText
-            android:id="@+id/boxEsatdoCadastro"
+            android:id="@+id/boxEstadoCadastro"
             android:layout_width="352dp"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Estado"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toTopOf="@+id/textCPFCadastro"
-            app:layout_constraintTop_toBottomOf="@+id/textEstadoCadastro"
-            tools:layout_editor_absoluteX="30dp" />
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toBottomOf="@+id/textEstadoCadastro" />
 
         <TextView
             android:id="@+id/textEstadoCadastro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
             android:layout_marginTop="5dp"
             android:text="Estado"
             android:textColor="@color/boxTextLogin"
             android:textColorLink="@color/boxTextLogin"
-            app:layout_constraintBottom_toTopOf="@+id/boxEsatdoCadastro"
-            app:layout_constraintStart_toStartOf="@+id/boxEsatdoCadastro"
+            app:layout_constraintBottom_toTopOf="@+id/boxEstadoCadastro"
+            app:layout_constraintStart_toStartOf="@+id/boxEstadoCadastro"
             app:layout_constraintTop_toBottomOf="@+id/boxApelidoCadastro" />
 
         <EditText
             android:id="@+id/boxDDDCadastro"
             android:layout_width="75dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:ems="10"
             android:hint="DDD"
             android:inputType="textPersonName"
-            tools:layout_editor_absoluteX="30dp"
-            tools:layout_editor_absoluteY="598dp" />
+            app:layout_constraintBottom_toTopOf="@+id/btnCadastrar"
+            app:layout_constraintEnd_toStartOf="@+id/boxTelefoneCadastro"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/guideline" />
 
         <TextView
             android:id="@+id/textDDDCadastro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
             android:text="DDD"
             android:textColor="@color/boxTextLogin"
             android:textColorLink="@color/boxTextLogin"
-            app:layout_constraintStart_toStartOf="@+id/boxDDDCadastro"
-            tools:layout_editor_absoluteY="579dp" />
+            app:layout_constraintBottom_toTopOf="@+id/boxDDDCadastro"
+            app:layout_constraintStart_toStartOf="@+id/boxDDDCadastro" />
 
         <EditText
             android:id="@+id/boxTelefoneCadastro"
             android:layout_width="170dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:ems="10"
             android:hint="Telefone"
             android:inputType="textPersonName"
-            tools:layout_editor_absoluteX="120dp"
-            tools:layout_editor_absoluteY="598dp" />
+            app:layout_constraintBottom_toTopOf="@+id/btnCadastrar"
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintStart_toStartOf="@+id/guideline" />
 
         <TextView
             android:id="@+id/textTelefoneCadastro"
@@ -271,8 +273,8 @@
             android:text="Telefone"
             android:textColor="@color/boxTextLogin"
             android:textColorLink="@color/boxTextLogin"
-            app:layout_constraintStart_toStartOf="@+id/boxTelefoneCadastro"
-            tools:layout_editor_absoluteY="579dp" />
+            app:layout_constraintBottom_toTopOf="@+id/boxTelefoneCadastro"
+            app:layout_constraintStart_toStartOf="@+id/boxTelefoneCadastro" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
